-Contact update and Anatomy project addition

--- a/Projects.html
+++ b/Projects.html
@@ -85,11 +85,11 @@
 
 										
 
-											<!-- test -->
-											<li onclick="document.getElementById('Procedural').style.display='block'">
+											<!-- Anatomy -->
+											<li onclick="document.getElementById('anatomy').style.display='block'">
 													<span class="icon major style5 fa-gem"></span>
-													<h3>Visual Intuition for music in VR</h3>
-													<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda magnam atque possimus, perferendis doloremque tenetur </p>
+													<h3>AnatomyMR</h3>
+													<p>A multi-user mixed reality platform for medical education that allows for dynamic content updation</p>
 											</li>
 
 										</ul>
@@ -314,10 +314,10 @@
 										</div>			
 								</div>
 
-								<div id="test" class="w3-modal">
+								<div id="anatomy" class="w3-modal">
 									<div class="w3-modal-content w3-animate-opacity w3-card-4">
 										<header > 
-											<span onclick="document.getElementById('test').style.display='none'" 
+											<span onclick="document.getElementById('anatomy').style.display='none'" 
 											class="button">&times;</span>
 											<h2>test</h2>
 										</header>
@@ -327,6 +327,20 @@
 										</div>										
 									</div>			
 								</div>
+
+								<div id="test" class="w3-modal">
+										<div class="w3-modal-content w3-animate-opacity w3-card-4">
+											<header > 
+												<span onclick="document.getElementById('test').style.display='none'" 
+												class="button">&times;</span>
+												<h2>test</h2>
+											</header>
+											<div >
+												<p>This is an ongoing project that has been in the works since summer 2018. It started as part of my internship under the guidance of Prof. Jayesh Pillai. We were initially exploring the idea of dynamically altering the visuals of a VR film in areas that are beyond the field of view of the viewer. This approach led to the current framework, Cinévoqué, whose name is a portmanteau of the words Cinema and Evoke, which espouses the ability of the framework to evoke a narrative that corresponds to the viewer's gaze behavior over the course of the movie.
+												</p>
+											</div>										
+										</div>			
+									</div>
 
 									
 								<footer class="major">
