--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 						</section> -->
 						<section>
 							<h2>Contact</h2>
-							<p>Reach out if you would to discuss XR, HCI, Games and VFX over coffee. If you find yourself at IIT Bombay, look for the guy roaming around whilst wearing a Unity T-Shirt.</p>
+							<p>Reach out if you would to discuss XR, HCI, Games and VFX over coffee. If you find yourself at IIT Bombay, look for the guy wearing a Unity T-Shirt.</p>
 							<dl class="alt">
 								<dt>Email</dt>
 								<dd><a href="#">amarnath2105@gmail.com</a></dd>
@@ -279,7 +279,7 @@
 								<li><a href="https://twitter.com/Amar_5261" target="_blank" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>								
 							</ul>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
 					</footer>
 
 			</div>
