--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 												</header>
 												<div >
 													<p>
-															ScholAR is a research project that is exploring how effective AR-based educational content can be democratized and deployed in schools, especially in rural schools. The project is being undertaken as part of Pratiti Sarkar's Ph.D. and is funded by the Tata Center for Technology and Design. I have been developing the AR applications used in the experiments while also assisting in conducting them.
+															ScholAR is a research project that is exploring how effective AR-based educational content can be democratized and deployed in schools, especially in rural schools. The project is being undertaken as part of <a href="https://scholar.google.com/citations?user=-QElsWoAAAAJ&hl=en" target="_blank">Pratiti Sarkar</a>'s Ph.D. and is funded by the Tata Center for Technology and Design. I have been developing the AR applications used in the experiments while also assisting in conducting them.
 													</p>
 													<p>
 															The school kids who used the application are either seeing AR for the first time (in the case of urban schools), or handling a tablet itself for the first time (at rural schools), so we had to design the experience around this constraint. For the rural schoolkids, the app had minimal UI, and most of the interactions were gesture-based. The application was also built such that all the interactions were logged and stored for analysis.  The project had investigated how the differnet stakeholders in a child's education perceive the usage of AR in schools and their expectations. Furthermore, experiments were conducted to understand the group dynamics fostered while using AR in a collaborative learning environment. 
@@ -149,7 +149,7 @@
 														   </div>
 													</p>
 													<p>
-															With results obtained from these studies, the project will is moving towards a deployable solution, wherein technical constraints that impede scalaiblity are being addressed.
+															With results obtained from these studies, the project is moving towards a deployable solution, wherein technical constraints that impede scalaiblity are being addressed.
 	
 													</p>
 												
@@ -268,7 +268,7 @@
 						</section> -->
 						<section>
 							<h2>Contact</h2>
-							<p>Reach out if you would to discuss XR, HCI, Games and VFX over coffee. If you find yourself at IIT Bombay, look for the guy wearing a Unity T-Shirt.</p>
+							<p>Reach out if you would to discuss XR, HCI, Games and VFX over coffee. If you ever find yourself at IIT Bombay, look for the guy wearing a Unity T-Shirt.</p>
 							<dl class="alt">
 								<dt>Email</dt>
 								<dd><a href="#">amarnath2105@gmail.com</a></dd>
