--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>CV</h2>
-									<p>Thank you for your interest in my profile, you can find my CV <a href="Amarnath CV.pdf">here</a>.</p>
+									<p>Thank you for your interest in my profile, you can find my CV <a href="CV.pdf">here</a>.</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
