- Footer missing word correction

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 						</section> -->
 						<section>
 							<h2>Contact</h2>
-							<p>Reach out if you would to discuss XR, HCI, Games and VFX over coffee. If you ever find yourself at IIT Bombay, look for the guy wearing a Unity T-Shirt.</p>
+							<p>Reach out if you would like to discuss XR, HCI, Games and VFX over coffee. If you ever find yourself at IIT Bombay, look for the guy wearing a Unity T-Shirt.</p>
 							<dl class="alt">
 								<dt>Email</dt>
 								<dd><a href="#">amarnath2105@gmail.com</a></dd>
