--- a/index.html
+++ b/index.html
@@ -278,8 +278,9 @@
 								<li><a href="https://www.linkedin.com/in/amarnathmurugan/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://twitter.com/Amar_5261" target="_blank" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>								
 							</ul>
+							
 						</section>
-						<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
+						<p class="copyright"> Derivative of a template by <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
