Added IEEEVR publication

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Stellar by HTML5 UP
 	html5up.net | @ajlkn
@@ -214,7 +214,11 @@
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p> -->
 								</header>
 								<ul style="text-align: justify;">
-									
+
+									<li>
+										<p>Sakhardande, Prabodh,<strong> Amarnath Murugan</strong>, and Jayesh S. Pillai. "Exploring Effect Of Different External Stimuli On Body Association In VR." 2020 IEEE Conference on Virtual Reality and 3D User Interfaces Abstracts and Workshops (VRW). IEEE, 2020.</p>
+									</li>
+
 									<li>
 										<p><strong> Murugan, Amarnath</strong>, Jayesh S. Pillai, and Amal Dev. "Cinévoqué: Development of a Passively Responsive Framework for Seamless Evolution of Experiences in Immersive Live-Action Movies." 25th ACM Symposium on Virtual Reality Software and Technology. ACM, 2019.</p>
 									</li>
@@ -229,8 +233,8 @@
 
 									<li>
 										<p>Pillai, Jayesh S., <strong> Amarnath Murugan</strong>, and Amal Dev. "Cinévoqué: Design of a Passively Responsive Framework for Seamless Evolution of Experiences in Immersive Live-Action Movies." IFIP Conference on Human-Computer Interaction. Springer, Cham, 2019.</p>
-									</li>	
-									
+									</li>
+
 
 								</ul>
 								<!-- <p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p> -->
