--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										<header class="major">
 											<h2>Hi there! I'm Amarnath</h2>
 										</header>
-										I am a Research assistant at the <a href="imxd.in">IMXD Lab</a>, IDC School of Design, IIT Bombay. My specialization is in Extended Reality, and I have been collaborating with pioneering startups and researchers in the field for almost four years. My research is currently focused on narratives, education and novel interaction techniques in XR.  Moving forward, I hope to focus on digital humans, and graphics in immersive environments. Previously I was a student ambassador for Unity Technologies and a team lead for the Extended Reality research group at <a href="https://www.nexttechlab.io/achievements" >Next Tech Lab</a>.
+										I am a Research assistant at the <a href="https://imxd.in">IMXD Lab</a>, IDC School of Design, IIT Bombay. My specialization is in Extended Reality, and I have been collaborating with pioneering startups and researchers in the field for almost four years. My research is currently focused on narratives, education and novel interaction techniques in XR.  Moving forward, I hope to focus on digital humans, and graphics in immersive environments. Previously I was a student ambassador for Unity Technologies and a team lead for the Extended Reality research group at <a href="https://www.nexttechlab.io" >Next Tech Lab</a>.
 										
 										<!-- <p>I am a research assistant at IDC School of Design, IIT Bombay. I recently graduated 
 										with a bachelor's in Computer Science and have been working on AR/VR and game dev over
