--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@
 								</header>
 								<ul style="text-align: justify;">
 									<li>
+										<p><strong> Amarnath Murugan</strong>,Rishi Vanukuru, and Jayesh Pillai. "Towards Avatars for Remote Communication using Mobile Augmented Reality. " IEEE VR 2021 Workshop: Virtual Humans and Crowds in Immersive Environments (in  press).</p>
+									</li>
+									<li>
 										<p>Vanukuru, Rishi,<strong> Amarnath Murugan</strong> , and Jayesh Pillai. "Dual Phone AR: Exploring the use of Phones as Controllers for Mobile Augmented Reality." 26th ACM Symposium on Virtual Reality Software and Technology. 2020.</p>
 									</li>
 
