Updated video in procedural

--- a/Projects.html
+++ b/Projects.html
@@ -278,13 +278,9 @@
 														The experience consists of two levels.Initially, to onboard the user, an underwater environment is shown with the virtual keyboard in front of them; when they press a key, a school of fish is spawned, which is driven by the BOIDS algorithm. 
 														As the user continues to play the instrument, the school changes its location accordingly to indicate that they are affected by the input. Once the user is comfortable with the experience, we move them to the next level, where they surface near an archipelago. Each island is mapped to an octave, and the topology of the island changes when a key within its octave is pressed.  
 														<br><br>
-															<div class="imgcontainer">
-																<video width="50%" autoplay loop>
-																	<source src="images/featured projects/procedural/demo.m4v" type="video/mp4">
-																
-																Your browser does not support the video tag.
-																</video>
-															</div>
+														<div class="imgcontainer" name="youtubevideo">
+														<iframe width="840" height="473" src="https://www.youtube.com/embed/gArph2JC5p8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+														</div>
 														<br>
 													<h3>Future Work</h3>
 														The project is a work in progress. We would like to add more features and improve the quality of the experience. For the technical side, I am planning to implement this with recent features of unity such as, ECS, Job System and the Burst Compiler for possible optimizations. We also intended to do a more rigorous literature review for finding better mappings between the keyboard inputs and terrain modifications. 
