--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 	
 													<p>This is my first graphics project. Following the <a href="https://raytracing.github.io/" target="_blank">Raytracing in one weekend</a> ebook series, I implemented a Raytracer from scratch in C++. The project served as an useful refresher for the maths used in graphics and contexualized the concepts. It also helped me learn some advanced and new concepts in C++.
 	
-													The first book focused on implementing vector math functions, rays, ray-sphere interactions, shading, aliasing, positionable camera and lens blur. The following images show scnens that implement all the above mentioned features.
+													The first book focused on implementing vector math functions, rays, ray-sphere interactions, shading, aliasing, positionable camera and lens blur. The following images show scenes that implement all the above mentioned features.
 													<div class="imgcontainer">
 														<img src="images/featured projects/graphicsProgramming/render.png" alt="" />
 														<img src="images/featured projects/graphicsProgramming/Output.png" alt="" />
@@ -227,7 +227,7 @@
 														<img src="images/featured projects/graphicsProgramming/mandelbrot.jpg" alt="" />
 														<img src="images/featured projects/graphicsProgramming/mandelbulb.jpg" alt="" />
 													</div>							
-													Additionally, I have implemented custom shaders in Unity as part of my work in IMXD lab. Which would be updated here after the completion of those projects.
+													Additionally, I have implemented custom shaders in Unity as part of my work in IMXD lab. Which would be updated here after their completion.
 													<br><br>
 													<h3>Next Steps</h3>
 													
