--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										<header class="major">
 											<h2>Hi there! I'm Amarnath</h2>
 										</header>
-										I am a Research Associate at the <a href="https://imxd.in">IMXD Lab</a>, IDC School of Design, IIT Bombay. My specialization is in Extended Reality, and I have been collaborating with pioneering startups and researchers in the field for almost four years. My research is currently focused on narratives, education and novel interaction techniques in XR.  Moving forward, I hope to focus on digital humans, and graphics in immersive environments. Previously I was a student ambassador for Unity Technologies and a team lead for the Extended Reality research group at <a href="https://www.nexttechlab.io" >Next Tech Lab</a>.
+										I am a Research Associate at the <a href="https://imxd.in">IMXD Lab</a>, IIT Bombay and an intern at the <a href="http://empathiccomputing.org/">Empathic Computing Lab</a>, University of South Australia. My research is currently focused on narratives, education and novel interaction techniques in XR.  Moving forward, I hope to focus on digital humans, and graphics in immersive environments. Previously I was a student ambassador for Unity Technologies and a team lead for the Extended Reality research group at <a href="https://www.nexttechlab.io" >Next Tech Lab</a>.
 										
 										<!-- <p>I am a research assistant at IDC School of Design, IIT Bombay. I recently graduated 
 										with a bachelor's in Computer Science and have been working on AR/VR and game dev over
@@ -253,7 +253,7 @@
 								</header>
 								<ul style="text-align: justify;">
 									<li>
-										<p><strong>Amarnath Murugan</strong>,Rishi Vanukuru, and Jayesh Pillai. "Towards Avatars for Remote Communication using Mobile Augmented Reality. " IEEE VR 2021 Workshop: Virtual Humans and Crowds in Immersive Environments (in  press).</p>
+										<p><strong>Amarnath Murugan</strong>,Rishi Vanukuru, and Jayesh Pillai. "Towards Avatars for Remote Communication using Mobile Augmented Reality. " IEEE VR 2021 Workshop: Virtual Humans and Crowds in Immersive Environments.</p>
 									</li>
 									<li>
 										<p>Vanukuru, Rishi,<strong> Amarnath Murugan</strong> , and Jayesh Pillai. "Dual Phone AR: Exploring the use of Phones as Controllers for Mobile Augmented Reality." 26th ACM Symposium on Virtual Reality Software and Technology. 2020.</p>
